# altv-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  _after-cpp-sdk-init.bat  _after-cpp-sdk-init.sh  _watch.bat  build.sh  dev-release.bat  init-cpp-sdk.bat  init-cpp-sdk.sh  release.toml  run-debug.sh  rustfmt.toml  test-debug.bat  test-dev-info.bat  test-info.bat  test-rc-info.bat  test-release-info.bat  update-cpp-sdk.bat  wasm.interface  wasm_natives.interface  watch-clippy.bat  watch-debug.bat  watch-info.bat  watch-test.bat
.cargo/: config.toml
alt/: Cargo.toml
alt/src/: events.rs  lib.rs
alt/src/specs/: mod.rs
altv/: Cargo.toml
altv/src/: events.rs  lib.rs  meta.rs  mvalue.rs
altv/themes/: altv.css
altv_module/: Cargo.toml  watch.bat
altv_module/src/: const_asserts.rs  event_manager.rs  helpers.rs  lib.rs  required_sdk_events.rs  resource_manager.rs  types.rs  wasi.rs  wasi_stdout_err.rs
altv_module_host/: Cargo.toml
altv_module_host/src/: lib.rs
altv_sdk/: Cargo.toml  build.rs  cpp-sdk-version.h  version.h
altv_sdk/include/: SDK_extend.h  alt_bridge.h
altv_sdk/src/: alt_bridge.cpp  alt_bridge.h  base_object_type.rs  callbacks.h  col_shape_type.rs  cpp_sdk_version.rs  event_type.rs  explosion_type.rs  helpers.rs  lib.rs  mvalue_type.rs  natives.h  player_body_part.rs  player_connect_denied_reason.rs  runtime.h  shared.h  vehicle_model_type.rs
altv_sdk/src/alt_classes/: CCancellableEvent.h  CClientDeleteObjectEvent.h  CClientRequestObjectEvent.h  CClientScriptEvent.h  CColShapeEvent.h  CConnectionQueueAddEvent.h  CConnectionQueueRemoveEvent.h  CConsoleCommandEvent.h  CEvent.h  CExplosionEvent.h  CFireEvent.h  CGameEntityCreateEvent.h  CGameEntityDestroyEvent.h  CGivePedScriptedTaskEvent.h  CGlobalMetaDataChangeEvent.h  CGlobalSyncedMetaDataChangeEvent.h  CLocalMetaDataChangeEvent.h  CMetaChangeEvent.h  CNetOwnerChangeEvent.h  CPedDamageEvent.h  CPedDeathEvent.h  CPedHealEvent.h  CPlayerChangeAnimationEvent.h  CPlayerChangeInteriorEvent.h  CPlayerChangeVehicleSeatEvent.h  CPlayerConnectDeniedEvent.h  CPlayerConnectEvent.h  CPlayerDamageEvent.h  CPlayerDeathEvent.h  CPlayerDimensionChangeEvent.h  CPlayerDisconnectEvent.h  CPlayerEnterVehicleEvent.h  CPlayerEnteringVehicleEvent.h  CPlayerHealEvent.h  CPlayerLeaveVehicleEvent.h  CPlayerRequestControlEvent.h  CPlayerSpawnEvent.h  CPlayerWeaponChangeEvent.h  CRequestSyncedSceneEvent.h  CResourceStartEvent.h  (+43 more)
altv_wasm/: Cargo.toml  build.rs
altv_wasm/src/: api.rs  event.rs  hash.rs  helpers.rs  lib.rs  logging.rs  memory_buffer.rs  natives.rs  script_id.rs  state.rs  timers.rs  wasi_guest_gen.rs
altv_wasm/src/asynch/: mod.rs  timer.rs
altv_wasm/src/base_objects/: any_entity.rs  any_vehicle.rs  base.rs  kind.rs  local_vehicle.rs  manager.rs  mod.rs  objects.rs  remote.rs  script_id.rs  shared_vehicle.rs  spawned_vehicle.rs  vehicle.rs  world_object.rs
core_altvx/: Cargo.toml
core_altvx/src/: ____events.rs  alt_resource.rs  base_object.rs  base_object_maps.rs  client_events.rs  col_shape.rs  core_funcs.rs  entity.rs  events.rs  exports.rs  helpers.rs  lib.rs  local_script_events.rs  logging.rs  mvalue.rs  player.rs  quaternion.rs  resource.rs  script_events.rs  structs.rs  timers.rs  vector.rs  vehicle.rs  virtual_entity.rs  virtual_entity_group.rs  world_object.rs
core_altvx/src/base_object/: base_object.rs  manager.rs  mod.rs  objects.rs
core_altvx/src/base_objects/: base_object.rs  manager.rs  mod.rs  objects.rs
core_altvx/src/events/: connection_queue.rs  controllers.rs  custom_controllers.rs  helpers.rs  mod.rs  parsers.rs  sdk.rs  sdk_controllers.rs  structs.rs
core_altvx/src/virtual_entities/: mod.rs  virtual_entity.rs  virtual_entity_group.rs
core_module/: Cargo.toml
core_module/src/: lib.rs
core_resource/: Cargo.toml
core_resource/src/: alt_resource.rs  base_object_funcs.rs  blip.rs  checkpoint.rs  client_events.rs  col_shape.rs  config_node.rs  connection_info.rs  core_funcs.rs  exports.rs  helpers.rs  lib.rs  marker.rs  meta.rs  mvalue.rs  mvalue_hash_map.rs  network_object.rs  object.rs  ped.rs  ped_model_info.rs  player.rs  resource.rs  rgba.rs  script_events.rs  structs.rs  timers.rs  vector.rs  vehicle.rs  vehicle_model_info.rs  voice_channel.rs  weapon_model_info.rs  world_object.rs
core_resource/src/base_objects/: base_object.rs  data.rs  helpers.rs  inherit_ptrs.rs  manager.rs  meta.rs  mod.rs  objects.rs  pool_funcs.rs
core_resource/src/col_shapes/: circle.rs
core_resource/src/events/: cancellable.rs  connection_queue.rs  custom_contexts.rs  custom_controllers.rs  helpers.rs  mod.rs  sdk_contexts.rs  sdk_controllers.rs
core_resource/src/meta/: checkpoint_stream_synced_meta.rs  entity_stream_synced_meta.rs  entry.rs  global.rs  mod.rs  player_local_meta.rs  ve_stream_synced_meta.rs
core_resource/src/virtual_entities/: virtual_entity.rs  virtual_entity_group.rs
core_shared/: Cargo.toml
core_shared/src/: lib.rs  result.rs
cpp_codegen/: Cargo.toml
cpp_codegen/src/: main.rs  statics.rs
example_resource/: Cargo.toml  watch.bat
example_resource/src/: lib.rs
logger/: Cargo.toml
logger/src/: lib.rs
mvalue/: Cargo.toml
mvalue/src/: bytes_num.rs  de.rs  de_dict_key.rs  de_mvalue_slice.rs  error.rs  helpers.rs  lib.rs  ser.rs  ser_base_object.rs  ser_dict_key.rs  ser_rgba.rs  ser_vector2.rs  ser_vector3.rs  types.rs  wrapper.rs  wrappers.rs
natives_codegen/: Cargo.toml
natives_codegen/src/: cpp_generator.rs  helpers.rs  host_call_generator.rs  interface_generator.rs  main.rs  parser.rs  pub_api_generator.rs  result_struct_generator.rs
resource_impl/: Cargo.toml
resource_impl/src/: base_object.rs  base_object_maps.rs  entity.rs  events.rs  helpers.rs  lib.rs  local_script_events.rs  logging.rs  mvalue.rs  player.rs  resource_impl.rs  sdk_events.rs  timers.rs  vehicle.rs
resource_main_macro/: Cargo.toml
resource_main_macro/src/: lib.rs
test/run_test/: Cargo.toml
test/rust_resource/: Cargo.toml
wasm_guest_test/: Cargo.toml
wasm_guest_test/src/: lib.rs  timers.rs
wasm_host/: Cargo.toml  build.rs
wasm_host/src/: gen.rs  lib.rs
(+98 files in other folders)
