[workspace]

members = [
    "core_shared",
    "core_module",
    # "core_resource",
    "mvalue",
    # "resource_main_macro",
    "altv_sdk",
    "altv_module",
    "logger",
    # "altv",
    "cpp_codegen",
    # "test/rust_resource",
    # "test/run_test",


    # clientside-only stuff
    "altv_wasm_shared",
    "altv_wasm",
    "wasm_codegen",
    "wasm_guest_test",
]

[workspace.package]
version = "15.0.0-dev.70"
rust-version = "1.68.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/xxshady/altv-rust"
readme = "README.md"

[workspace.dependencies]
cxx = "1.0.91"
autocxx = "0.25.0"
anyhow = { package = "lmnkjgkj-std-backtrace-anyhow", version = "0.0.1" }
paste = "1.0.11"
lazy_static = "1.4.0"
serde = { version = "1.0.162", features = ["derive", "rc"] }
serde_bytes = "0.11.9"
erased-serde = "0.3.25"
quote = "1.0.32"
syn = "2.0.28"
proc-macro2 = "1.0.66"
bincode = "1.3.3"

[workspace.metadata.release]
pre-release-commit-message = "release new version: {{version}}"
tag = false
