[workspace]
resolver = "2"

members = [
    "core_shared",
    "core_module",
    "core_resource",
    "mvalue",
    "resource_main_macro",
    "altv_sdk",
    "altv_module",
    "logger",
    "altv",
    "cpp_codegen",
    "test/rust_resource",
    "test/run_test",
]

[workspace.package]
version = "16.0.0-dev.1"
rust-version = "1.73.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/xxshady/altv-rust"
readme = "README.md"

[workspace.dependencies]
cxx = "1.0.115"
autocxx = "0.26.0"
anyhow = { package = "lmnkjgkj-std-backtrace-anyhow", version = "0.0.1" }
paste = "1.0.14"
lazy_static = "1.4.0"
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_bytes = "0.11.14"
erased-serde = "0.3.31"

[workspace.metadata.release]
pre-release-commit-message = "release new version: {{version}}"
tag = false
