[package]
name = "alt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altv_sdk = { path = "../altv_sdk" }
resource_main_macro = { path = "../resource_main_macro" }
resource_impl = { path = "../resource_impl" }
