[package]
name = "altv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altv_sdk = { path = "../altv_sdk" }
resource_main_macro = { path = "../resource_main_macro" }
anyhow = { workspace = true }
core_altv = { path = "../core_altv" }
