[package]
name = "altv"
description = "An internal crate for alt:V module. Not intended for direct use."
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altv_sdk = { path = "../altv_sdk", package = "altv_internal_sdk", version = "0.3.0" }
resource_main_macro = { path = "../resource_main_macro", package = "altv_internal_resource_main_macro", version = "0.3.0" }
core_altv = { path = "../core_altv", package = "altv_internal_core_resource", version = "0.3.0" }
anyhow = { workspace = true }
