[package]
name = "altv"
description = "Rust server-side API for writing your gamemodes on alt:V"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altv_sdk = { path = "../altv_sdk", package = "altv_internal_sdk", version = "15.0.0-dev.39" }
resource_main_macro = { path = "../resource_main_macro", package = "altv_internal_resource_main_macro", version = "15.0.0-dev.39" }
core_resource = { path = "../core_resource", package = "altv_internal_core_resource", version = "15.0.0-dev.39" }
