[package]
name = "altv_module"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altv_sdk = { path = "../altv_sdk", package = "altv_internal_sdk", version = "=15.0.0-dev.67" }
# core_module = { path = "../core_module", version = "=15.0.0-dev.67" }
logger = { path = "../logger", package = "altv_internal_logger", version = "=15.0.0-dev.67" }
paste = { workspace = true }
autocxx = { workspace = true }
lazy_static = { workspace = true }
wasmer = { version = "4.0.0", default-features = false, features = ["sys", "cranelift"] }
wasmer-wasix = { version = "0.9.0", default-features = false, features = ["sys-default"] }
wai-bindgen-wasmer = "0.9.0"

[lib]
crate-type = ["cdylib"]
