[package]
name = "altv_module"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altv_sdk = { path = "../altv_sdk", package = "altv_internal_sdk", version = "=15.0.0-dev.72" }
# core_module = { path = "../core_module", version = "=15.0.0-dev.72" }
logger = { path = "../logger", package = "altv_internal_logger", version = "=15.0.0-dev.72" }
paste = { workspace = true }
autocxx = { workspace = true }
lazy_static = { workspace = true }
bincode = { workspace = true }
wasmtime = "12.0.1"
wasmtime-wasi = "12.0.1"
wasm_codegen = { path = "../wasm_codegen" }
serde = { workspace = true }
altv_wasm_shared = { path = "../altv_wasm_shared" }
async-trait = "0.1.73"
wasi-common = "12.0.1"
io-extras = "0.18.0"

[lib]
crate-type = ["cdylib"]
