[package]
name = "altv_module_host"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libloading = "0.7.4"
altv_sdk = { path = "../altv_sdk", package = "altv_internal_sdk", version = "=15.0.0-dev.72" }
logger = { path = "../logger", package = "altv_internal_logger", version = "=15.0.0-dev.72" }
cxx = { workspace = true }
process_path = "0.1.4"
