[package]
name = "altv_internal_sdk"
description = "An internal crate for alt:V module. Not intended for direct use."
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

include = [
    "cpp-sdk/*"
]

[dependencies]
cxx = { workspace = true }
autocxx = { workspace = true }
primitive_enum = "1.0.2"

[build-dependencies]
autocxx-build = "0.24.0"
miette = { version = "5", features = ["fancy"] }
