[package]
name = "altv_internal_sdk"
description = "An internal crate for alt:V module. Not intended for direct use."
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[dependencies]
cxx = { workspace = true }
autocxx = { workspace = true }

[build-dependencies]
autocxx-build = "0.25.0"
