[package]
name = "altv_wasm"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom-print = "1.0.0"
wasm_codegen = { path = "../wasm_codegen" }
serde = { workspace = true }
bincode = { workspace = true }
paste = { workspace = true }
anyhow = { workspace = true }
