[package]
name = "core_altvx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_shared = { path = "../core_shared" }
logger = { path = "../logger" }
altv_sdk = { path = "../altv_sdk" }
anyhow = { workspace = true }
autocxx = { workspace = true }
paste = { workspace = true }
lazycell = "1.3.0"
