[package]
name = "core_module"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altv_sdk = { path = "../altv_sdk", package = "altv_internal_sdk", version = "15.0.0-dev.41" }
core_shared = { path = "../core_shared", package = "altv_internal_core_shared", version = "15.0.0-dev.41" }
