[package]
name = "altv_internal_core_resource"
description = "An internal crate for alt:V module. Not intended for direct use."
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_shared = { path = "../core_shared", package = "altv_internal_core_shared", version = "15.0.0-dev.30" }
logger = { path = "../logger", package = "altv_internal_logger", version = "15.0.0-dev.30" }
altv_sdk = { path = "../altv_sdk", package = "altv_internal_sdk", version = "15.0.0-dev.30" }
mvalue = { path = "../mvalue", package = "altv_internal_mvalue", version = "15.0.0-dev.30" }
anyhow = { workspace = true }
autocxx = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
erased-serde = { workspace = true }
