[package]
name = "example_resource"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alt = { path = "../altv", package = "altv" }
rand = "0.8.5"

[lib]
crate-type = ["cdylib"]
