[package]
name = "example_resource"
version = "15.0.0-dev.25"
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altv = { path = "../altv" }

[lib]
crate-type = ["cdylib"]
