[package]
name = "natives_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check_keyword = "0.2.0"
indoc = "2.0.4"
reqwest = { version = "0.11.21", features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = "1.0.107"
