[package]
name = "resource_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altv_sdk = { path = "../altv_sdk" }
logger = { path = "../logger" }
anyhow = { workspace = true }
autocxx = { workspace = true }
paste = "1.0.11"
