[package]
name = "resource_main_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.21"
syn = { version = "1.0.105", features = ["extra-traits", "full"] }

[lib]
proc_macro = true
