[package]
name = "wasm_guest_test"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = { workspace = true }
stats_alloc = "0.1.10"
custom-print = "1.0.0"
wasm_bindgen = { path = "../wasm_bindgen" }
serde = { workspace = true }
bincode = { workspace = true }

[lib]
crate-type = ["cdylib"]
