[package]
name = "run_test"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13.7"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
