[package]
name = "rust_resource"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altv = { path = "../../altv" }
paste = { workspace = true }

[lib]
crate-type = ["cdylib"]
